# smirk

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CD.yaml  CD.yml  CI.yaml  docs.yml
docs/: .gitignore  conf.py  developer.md  index.md  smirk_demo.ipynb
python/smirk/: __init__.py
src/: tokenizer.rs
test/: test_fast_tokenizer.py  test_smirk_gpe.py  test_transformers.py
