[project]
name = "smirk"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "transformers ~= 4.40",
]

[project.optional-dependencies]
test = [
    "pytest~=8.3",
    "parameterized==0.9.0",
    "torch",
    "numpy",
]

[build-system]
build-backend = "maturin"
requires = ["maturin~=1.7"]

[tool.maturin]
python-source = "python"
include = [ "./python/smirk/vocab_smiles.json", "./python/smirk/vocab_selfies.json" ]
