[project]
name = "smirk"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "transformers >=4.40,<5",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
    "parameterized==0.9.0",
    "ruff~=0.9.4",
    "torch~=2.0",
    "numpy~=2.0",
]

[build-system]
build-backend = "maturin"
requires = ["maturin~=1.7"]

[tool.maturin]
python-source = "python"
include = [ "./python/smirk/vocab_smiles.json", "./python/smirk/vocab_selfies.json" ]
